# learn-build123d

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cnc/: __init__.py  base_frame.py  component.py  config.py  drag_chains.py  gantry_bridge.py  gantry_uprights.py  helpers.py  lead_screws.py  main.py  motor_mounts.py  safety.py  spindle_mount.py  work_bed.py  x_rails.py  y_rails.py  z_assembly.py
lessons/: 01_hello_world.py  02_fillet_edges.py
